Moved some galery logic around to stop flickering of gallery when editing in admin area

--- a/app/src/components/App/Gallery/Gallery.scss
+++ b/app/src/components/App/Gallery/Gallery.scss
@@ -9,7 +9,6 @@
             .gallery-images {
                 margin: 0 -1.25rem;
                 flex-grow: 1;
-                margin-top: 1.25rem;
                 margin-bottom: -1.25rem;
                 position: relative;
                 overflow: hidden;
